<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/favorite_clear"
            app:layout_constraintStart_toEndOf="@+id/imageClose"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/searchCharacter"
                    style="@style/TextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/detail_character"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/favorite_clear"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_marginEnd="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_clear"
            app:layout_constraintBottom_toBottomOf="@+id/toolbarCharacter"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintTop_toTopOf="parent"  />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageClose"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_close"
            app:civ_circle_background_color="@color/green"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvImage"
            style="@style/CardViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/toolbarCharacter">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/ic_photo" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/cvImage">

            <TextView
                android:id="@+id/name"
                style="@style/h3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name_character"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/linearName">

            <TextView
                android:id="@+id/description"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/linearName"
                app:layout_constraintTop_toBottomOf="@id/linearName" />

        </LinearLayout>

        <View
            android:id="@+id/topLine"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginTop="10dp"
            android:background="@color/green"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/linearDescription" />

        <LinearLayout
            android:id="@+id/linearCommit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/topLine">

            <TextView
                android:id="@+id/commit"
                style="@style/h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commits"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/start"
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_commit" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearCommits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/linearCommit">

            <TextView
                android:id="@+id/commits"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_commits"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/linearName"
                app:layout_constraintTop_toBottomOf="@id/linearName" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearSerie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/linearCommits">

            <TextView
                android:id="@+id/serie"
                style="@style/h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/series"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/startSerie"
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:layout_marginStart="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_series" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSeries"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/linearSerie">

            <TextView
                android:id="@+id/series"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_commits"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/linearName"
                app:layout_constraintTop_toBottomOf="@id/linearName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearStories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/linearSeries">

            <TextView
                android:id="@+id/stories"
                style="@style/h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stories"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/startStories"
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:layout_marginStart="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_cuentos" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearStory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/linearStories">

            <TextView
                android:id="@+id/story"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_commits"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/linearName"
                app:layout_constraintTop_toBottomOf="@id/linearName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/linearStory">

            <TextView
                android:id="@+id/event"
                style="@style/h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/startEvent"
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:layout_marginStart="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_event" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearEvents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/linearEvent">

            <TextView
                android:id="@+id/events"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_commits"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/linearName"
                app:layout_constraintTop_toBottomOf="@id/linearName" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>